Fix alignment; Refactor comment section
New active input field colors

--- a/src/scss/deps/_post.scss
+++ b/src/scss/deps/_post.scss
@@ -1,6 +1,6 @@
 .blog-content {
     color: $palette-slate-gray;
-    font-family: "Zilla Slab", Georgia, Cambria, "Times New Roman", Times, serif;
+    font-family: $font-family-article-stack;
     font-size: 1.15em;
     line-height: 1.63em;
     letter-spacing: -0.003em;
